--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "react-navigation": "^1.0.0-beta.11",
     "react-redux": "^5.0.5",
     "redux": "^3.6.0",
+    "redux-async-await": "^1.0.1",
     "redux-logger": "^3.0.6",
     "redux-thunk": "^2.2.0"
   },
